--- a/style.css
+++ b/style.css
@@ -1,7 +1,24 @@
-p {
-  margin-top: 10px;
+.box {
+  margin-top: 30px;
   border: 1px solid black;
-  width: 20%;
-  text-align: center;
-  padding: 15px 0 15px 0;
+  width: 400px;
+  height: 400px;
+}
+
+@keyframes colorChange {
+  0% {
+    background-color: red;
+  }
+  25% {
+    background-color: yellow;
+  }
+  50% {
+    background-color: green;
+  }
+  75% {
+    background-color: blue;
+  }
+  100% {
+    background-color: red;
+  }
 }
